syntax = "proto3";
package telepresence;
import "rpc/iptables/iptables.proto";
import "rpc/version/version.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/datawire/telepresence2/pkg/rpc/daemon";
option java_multiple_files = true;
option java_package = "io.datawire.telepresence.rpc";
option java_outer_classname = "Daemon";

// The Daemon service is responsible for managing network overrides and also
// acts as the central point for logging.
service Daemon {
  // Returns version information from the Daemon
  rpc Version(google.protobuf.Empty) returns (version.VersionInfo);

  // Returns the current connectivity status
  rpc Status(google.protobuf.Empty) returns (DaemonStatus);

  // Turns network overrides off.
  rpc Pause(google.protobuf.Empty) returns (PauseInfo);

  // Turns network overrides back on (after using Pause)
  rpc Resume(google.protobuf.Empty) returns (ResumeInfo);

  // Logger accepts a stream that can be used for posting messages to
  // the daemon logger.
  rpc Logger(stream LogMessage) returns (google.protobuf.Empty);

  // Quits (terminates) the service.
  rpc Quit(google.protobuf.Empty) returns (google.protobuf.Empty);

  // DeleteIPTable deletes the IP-table for the given name
  rpc DeleteIPTable(TableName) returns (google.protobuf.Empty);

  // IPTable returns the IP-table for the given name
  rpc IPTable(TableName) returns (iptables.Table);

  // IPTable returns all IP-tables
  rpc AllIPTables(google.protobuf.Empty) returns (Tables);

  // Update assigns adds or updates an IP-table.
  rpc Update(iptables.Table) returns (google.protobuf.Empty);

  // DnsSearchPath returns the DNS search path
  rpc DnsSearchPath(google.protobuf.Empty) returns (Paths);

  // SetSearch sets a new search path.
  rpc SetDnsSearchPath(Paths) returns (google.protobuf.Empty);
}

// LogMessage carries a message and a flag telling the service if the message
// is intended for debugging or more general info.
message LogMessage {
  bool is_debug = 1;
  string text = 2;
}

message PauseInfo {
  enum ErrType {
    UNSPECIFIED = 0;
    ALREADY_PAUSED = 1;
    CONNECTED_TO_CLUSTER = 2;
    UNEXPECTED_PAUSE_ERROR = 3;
  }
  ErrType error = 1;
  string error_text = 2;
}

message ResumeInfo {
  enum ErrType {
    UNSPECIFIED = 0;
    NOT_PAUSED = 1;
    REESTABLISHING = 2;
    UNEXPECTED_RESUME_ERROR = 3;
  }
  ErrType error = 1;
  string error_text = 2;
}

message DaemonStatus {
  enum ErrType {
    UNSPECIFIED = 0;
    NOT_STARTED = 1;
    PAUSED = 2;
    NO_NETWORK = 3;
  }
  ErrType error = 1;
}

message Paths {
  repeated string paths = 1;
}

message Tables {
  repeated iptables.Table tables = 1;
}

message TableName {
  string name = 1;
}
